--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     "jsx": true
   },
   "rules": {
+    "no-console":0,
     "no-var": 2,                     // http://eslint.org/docs/rules/no-var
     "prefer-const": 2,               // http://eslint.org/docs/rules/prefer-const
 
