--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "html-webpack-plugin": "^1.6.1",
     "jscs": "^2.1.1",
     "jsdom": "^6.5.1",
-    "json-loader": "^0.5.3",
     "mocha": "^2.3.3",
     "mocha-jsdom": "^1.0.0",
+    "node-sass": "^4.5.3",
     "postcss-loader": "^0.6.0",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.0",
     "rimraf": "^2.4.3",
+    "sass-loader": "^6.0.6",
     "sinon": "^1.16.1",
     "sinon-chai": "^2.8.0",
     "stats-webpack-plugin": "^0.2.1",
