--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
-{
+clear{
   "name": "webpack-react-boilerplate",
   "version": "1.0.0",
   "repository": "https://github.com/jprivillaso/webpack-react-boilerplate",
-  "description": "Boilerplate to be used for any project",
-  "main": "viridis.ui.widget.js",
+  "description": "Boilerplate to be used for any project. It uses Webpack and React",
+  "main": "server.js",
   "author": "Juan Rivillas",
   "license": "MIT",
   "scripts": {
@@ -11,28 +11,46 @@
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
   },
   "dependencies": {
-    "react": "~15.5.4",
-    "react-addons-test-utils": "^15.5.1",
-    "react-dom": "~15.5.4",
-    "react-redux": "^5.0.4",
-    "react-router": "^4.1.1",
-    "redux": "^3.6.0"
+    "axios": "^0.16.2",
+    "express": "^4.13.3",
+    "highcharts": "^5.0.14",
+    "immutable": "^3.8.1",
+    "jquery": "^3.2.1",
+    "lodash": "^3.10.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-helmet": "^5.1.3",
+    "react-hot-loader": "3.0.0-beta.7",
+    "react-redux": "^5.0.5",
+    "react-router-config": "^1.0.0-beta.3",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^0.15.6",
+    "styled-components": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
-    "babel-eslint": "^4.1.6",
-    "babel-jscs": "^2.0.5",
-    "babel-loader": "^6.2.3",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.1.0",
-    "babel-preset-stage-0": "^6.3.13",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-module-alias": "^1.6.0",
+    "babel-plugin-styled-components": "^1.1.7",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "chai": "^3.2.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.19.0",
-    "eslint": "^1.5.0",
-    "eslint-plugin-react": "^3.4.2",
-    "express": "^4.13.3",
+    "eslint": "^4.3.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-redux-saga": "^0.4.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^1.6.1",
     "jscs": "^2.1.1",
@@ -43,6 +61,7 @@
     "postcss-loader": "^0.6.0",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.0",
+    "redux-devtools-extension": "^2.13.2",
     "rimraf": "^2.4.3",
     "sass-loader": "^6.0.6",
     "sinon": "^1.16.1",
@@ -50,7 +69,7 @@
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
     "webpack": "^3.4.1",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0"
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
