--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "webpack-react-boilerplate",
   "version": "1.0.0",
   "repository": "https://github.com/jprivillaso/webpack-react-boilerplate",
-  "description": "Boilerplate to be used for any project. It uses Webpack and React",
+  "description": "React boilterplate using React, Redux and Redux-Saga",
   "main": "server.js",
   "author": "Juan Rivillas",
   "license": "MIT",
+  "keywords": [
+    "react",
+    "redux-saga",
+    "redux",
+    "boilerplate",
+    "starter",
+    "simple"
+  ],
   "scripts": {
     "start": "cross-env NODE_ENV=development node server.js",
-    "build": "rimraf dist && cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors"
+    "build": "rimraf dist && npm run vendor && cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
+    "vendor": "webpack --config webpack.vendor.config.js"
   },
   "dependencies": {
-    "axios": "^0.16.2",
     "express": "^4.13.3",
-    "highcharts": "^5.0.14",
-    "immutable": "^3.8.1",
-    "jquery": "^3.2.1",
     "lodash": "^3.10.1",
+    "moment": "^2.19.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
@@ -27,8 +33,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
-    "redux-saga": "^0.15.6",
-    "styled-components": "^2.1.2"
+    "redux-saga": "^0.15.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
