Updated versions of main libs.
- React 16.2.0
- Webpack 3.10
- React-Dom 16.2.0

And its dependencies.
Fixed hot reloading for development mode and modified express server to deliver static code correctly.
Created npm script called start-prod to test the generated bundles with an express server

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,8 @@
 {
   "presets": [
-    ["es2015", {
-      "es2015": {
-        "loose": true,
-        "modules": false
+    ["env", {
+      "targets": {
+        "browsers": ["last 2 Chrome versions"]
       }
     }],
     "react",
