--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "start": "cross-env NODE_ENV=development node server.js",
+    "start-prod": "cross-env NODE_ENV=production node server.js",
     "build": "rimraf dist && npm run vendor && cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
     "vendor": "webpack --config webpack.vendor.config.js"
   },
@@ -23,14 +24,11 @@
     "express": "^4.13.3",
     "lodash": "^3.10.1",
     "moment": "^2.19.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "3.0.0-beta.7",
     "react-redux": "^5.0.5",
-    "react-router-config": "^1.0.0-beta.3",
-    "react-router-dom": "^4.1.2",
-    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^0.15.6"
@@ -39,12 +37,13 @@
     "autoprefixer": "^6.0.3",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.1",
-    "babel-eslint": "^7.2.3",
     "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-styled-components": "^1.1.7",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -71,10 +70,11 @@
     "sass-loader": "^6.0.6",
     "sinon": "^1.16.1",
     "sinon-chai": "^2.8.0",
-    "stats-webpack-plugin": "^0.2.1",
+    "stats-webpack-plugin": "^0.6.1",
     "style-loader": "^0.12.4",
-    "webpack": "^3.4.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
