--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "cross-env NODE_ENV=development node server.js",
     "start-prod": "cross-env NODE_ENV=production node server.js",
     "build": "rimraf dist && npm run vendor && cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
+    "concurrent-build": "rimraf dist && npm run vendor && NODE_ENV=production node ./webpack.concurrent-build.js",
     "vendor": "webpack --config webpack.vendor.config.js"
   },
   "dependencies": {
